@@ -1,6 +1,7 @@
 Revision history for Bible::OBML
 
 {{$NEXT}}
+        - Updated docs to skip mention of non-required ASCII-only requirement
 
 1.06      2016-11-24 09:20:21-08:00 America/Los_Angeles
         - Change red text markers from <> to **
